--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 body {
   margin: 0;
+  font-family: sans-serif;
+}
+.container {
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 30px;
 }
