--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 body {
   margin: 0;
   font-family: sans-serif;
+  background-color: #f7f8fc;
+  overflow-x: hidden;
 }
 .container {
-  max-width: 1440px;
   width: 100%;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 0 30px;
 }
